Assets/styles/forum.css
#post {
  width: 99%;
  position: relative;
  left: 1%;
}

#comments {
  display: block;
  margin: auto;
}

.comment-list, #reply {
  width: 100vmin;
}

.comment-top {
  display: flex;
}

.comment-top a {
  display: inline-flex;
  text-decoration: none;
  color: var(--palette-textcolor);
}

.comment-content {
  margin: 0;
  padding: 5px;
  display: block;
}

.comment {
  color: var(--palette-textcolor);
  background-color: var(--palette-background-card);
  display: block;
  border: 1px solid var(--palette-background-item);
  border-radius: 10px;
  margin: 0 0 5px 0;
  width: 100%;
  position: relative;
}

#reply-btn {
  color: var(--palette-textcolor);
  background-image: none;
}
#reply-btn:hover {
  color: var(--palette-textcolor);
  background-color: var(--palette-background-item);
  cursor: pointer;
}

#reply {
  background: var(--palette-background-card);
  position: fixed;
  z-index: 100;
  display: none;
  bottom: 5px;
  border: 1px solid var(--palette-background-item);
  border-radius: 10px;
  transform: translateX(1%);
}

#reply-textbox {
  margin: 0;
  padding: 5px;
  display: block;
  width: calc(100% - 10px);
  outline: none;
  resize: none;
  background: var(--palette-background-container);
  color: var(--palette-textcolor);
}

.comment-data {
  position: relative;
  top: -15px;
  color: gray;
  text-align: center;
}

.comment-menu {
  position: absolute;
  right: 2px;
  top: 2px;
}

.comment-menu-img {
  width: 1em;
  height: 1em;
  border-radius: 50%;
  padding: 5px;
  display: block;
}

.comment-menu-img:hover {
  background-color: var(--palette-background-item);
}

.comment-menu:hover .comment-menu-img {
  background-color: var(--palette-background-item);
}

.comment-menu-options {
  position: absolute;
  display: none;
  z-index: 100;
  background-color: var(--palette-background-card);
}

.comment-menu-options input {
  display: block;
  color: var(--palette-textcolor);
  border-radius: 0;
  width: 100%;
  background-color: var(--palette-background-card);
  background-image: none;
}

.comment-menu-options input:hover {
  background-color: var(--palette-background-item);
}

.comment-menu:hover .comment-menu-options {
  display: block;
}

.comment-upvote {
  float: right;
  display: flex;
  position: absolute;
  bottom: 2px;
  right: 2px;
  z-index: 99;
}

.post-upvote {
  margin-bottom: 5px;
}

.post-name {
  text-align: center;
  color: var(--palette-textcolor);
}

.upvote-container, .report-btn {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  font-size: 1em;
  user-select: none;
  fill: #a5a5b0;
}

.upvote-icon {
  transform: rotate(-180deg);
  margin: 0 0 0 3px;
}

.report-btn {
  background-image: none;
  background-color: transparent;
  padding: 0 5px 0 5px;
}
.report-btn:hover {
  background-color: transparent;
}

.upvote-container input:checked + .upvote-icon {
  fill: #e16b83;
}

